# paxbot

./: Cargo.toml  README.md  rustfmt.toml
content/: content.toml
src/: consts.rs  main.rs  search.rs
src/commands/: ask.rs  mod.rs  util.rs
src/search/: backend.rs  mod.rs
