[package]
name = "paxbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serenity = "0.10.8"
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
